--- a/metadata.yaml
+++ b/metadata.yaml
@@ -41,5 +41,6 @@ subjects:
 - !lcsh 'Dogs -- Fiction'
 - !lcsh 'Dartmoor (England) -- Fiction'
 - !lcsh 'Holmes, Sherlock (Fictitious character) -- Fiction'
+- GITenberg
 title: 'Tajemnica Baskerville''ów: dziwne przygody Sherlocka Holmes'
 url: http://www.gutenberg.org/ebooks/34079
